parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> statement ; statement
Rule 3     convert -> 2INT
Rule 4     convert -> 2STR
Rule 5     convert -> 2FLOAT
Rule 6     convert -> 2BOOL
Rule 7     expression -> convert expression
Rule 8     expression -> NOT expression
Rule 9     expression -> PRINT expression
Rule 10    expression -> NAME = expression
Rule 11    type -> STRING_TYPE
Rule 12    type -> INT_TYPE
Rule 13    type -> FLOAT_TYPE
Rule 14    type -> BOOL_TYPE
Rule 15    expression -> type NAME = expression
Rule 16    statement -> DEF NAME args - > type = expression
Rule 17    args -> empty
Rule 18    args -> type NAME args
Rule 19    expression -> NAME ( call_args )
Rule 20    call_args -> empty
Rule 21    call_args -> expression
Rule 22    call_args -> expression , call_args
Rule 23    expression -> error ; expression
Rule 24    expression -> expression ; expression
Rule 25    expression -> { expression }
Rule 26    expression -> IF expression THEN expression else_expression
Rule 27    else_expression -> ELSE expression
Rule 28    else_expression -> empty
Rule 29    expression -> WHILE expression DO expression END
Rule 30    expression -> expression + expression
Rule 31    expression -> expression - expression
Rule 32    expression -> expression * expression
Rule 33    expression -> expression / expression
Rule 34    expression -> expression ^ expression
Rule 35    expression -> expression EQ expression
Rule 36    expression -> expression > expression
Rule 37    expression -> expression < expression
Rule 38    expression -> expression NEQ expression
Rule 39    expression -> - expression
Rule 40    expression -> ( expression )
Rule 41    expression -> NUMBER
Rule 42    expression -> FLOAT
Rule 43    expression -> STRING
Rule 44    expression -> TRUE
Rule 45    expression -> FALSE
Rule 46    expression -> NAME
Rule 47    empty -> <empty>

Terminals, with rules where they appear

(                    : 19 40
)                    : 19 40
*                    : 32
+                    : 30
,                    : 22
-                    : 16 31 39
/                    : 33
2BOOL                : 6
2FLOAT               : 5
2INT                 : 3
2STR                 : 4
;                    : 2 23 24
<                    : 37
=                    : 10 15 16
>                    : 16 36
BOOL_TYPE            : 14
DEF                  : 16
DO                   : 29
ELSE                 : 27
END                  : 29
EQ                   : 35
FALSE                : 45
FLOAT                : 42
FLOAT_TYPE           : 13
IF                   : 26
INT_TYPE             : 12
NAME                 : 10 15 16 18 19 46
NEQ                  : 38
NOT                  : 8
NUMBER               : 41
PRINT                : 9
STRING               : 43
STRING_TYPE          : 11
THEN                 : 26
TRUE                 : 44
WHILE                : 29
^                    : 34
error                : 23
{                    : 25
}                    : 25

Nonterminals, with rules where they appear

args                 : 16 18
call_args            : 19 22
convert              : 7
else_expression      : 26
empty                : 17 20 28
expression           : 1 7 8 9 10 15 16 21 22 23 24 24 25 26 26 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40
statement            : 2 2 0
type                 : 15 16 18

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . statement ; statement
    (16) statement -> . DEF NAME args - > type = expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    DEF             shift and go to state 3
    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    type                           shift and go to state 6
    convert                        shift and go to state 7

state 1

    (0) S' -> statement .
    (2) statement -> statement . ; statement

    ;               shift and go to state 28


state 2

    (1) statement -> expression .
    (24) expression -> expression . ; expression
    (30) expression -> expression . + expression
    (31) expression -> expression . - expression
    (32) expression -> expression . * expression
    (33) expression -> expression . / expression
    (34) expression -> expression . ^ expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . > expression
    (37) expression -> expression . < expression
    (38) expression -> expression . NEQ expression

  ! shift/reduce conflict for ; resolved as shift
    $end            reduce using rule 1 (statement -> expression .)
    ;               shift and go to state 29
    +               shift and go to state 30
    -               shift and go to state 31
    *               shift and go to state 32
    /               shift and go to state 33
    ^               shift and go to state 34
    EQ              shift and go to state 35
    >               shift and go to state 36
    <               shift and go to state 37
    NEQ             shift and go to state 38

  ! ;               [ reduce using rule 1 (statement -> expression .) ]


state 3

    (16) statement -> DEF . NAME args - > type = expression

    NAME            shift and go to state 39


state 4

    (10) expression -> NAME . = expression
    (19) expression -> NAME . ( call_args )
    (46) expression -> NAME .

    =               shift and go to state 40
    (               shift and go to state 41
    ;               reduce using rule 46 (expression -> NAME .)
    +               reduce using rule 46 (expression -> NAME .)
    -               reduce using rule 46 (expression -> NAME .)
    *               reduce using rule 46 (expression -> NAME .)
    /               reduce using rule 46 (expression -> NAME .)
    ^               reduce using rule 46 (expression -> NAME .)
    EQ              reduce using rule 46 (expression -> NAME .)
    >               reduce using rule 46 (expression -> NAME .)
    <               reduce using rule 46 (expression -> NAME .)
    NEQ             reduce using rule 46 (expression -> NAME .)
    $end            reduce using rule 46 (expression -> NAME .)
    )               reduce using rule 46 (expression -> NAME .)
    }               reduce using rule 46 (expression -> NAME .)
    THEN            reduce using rule 46 (expression -> NAME .)
    DO              reduce using rule 46 (expression -> NAME .)
    ,               reduce using rule 46 (expression -> NAME .)
    ELSE            reduce using rule 46 (expression -> NAME .)
    END             reduce using rule 46 (expression -> NAME .)


state 5

    (39) expression -> - . expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 42
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 6

    (15) expression -> type . NAME = expression

    NAME            shift and go to state 43


state 7

    (7) expression -> convert . expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    convert                        shift and go to state 7
    expression                     shift and go to state 44
    type                           shift and go to state 6

state 8

    (8) expression -> NOT . expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 45
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 9

    (9) expression -> PRINT . expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 46
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 10

    (40) expression -> ( . expression )
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 47
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 11

    (23) expression -> error . ; expression

    ;               shift and go to state 48


state 12

    (25) expression -> { . expression }
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 49
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 13

    (26) expression -> IF . expression THEN expression else_expression
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 50
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 14

    (29) expression -> WHILE . expression DO expression END
    (7) expression -> . convert expression
    (8) expression -> . NOT expression
    (9) expression -> . PRINT expression
    (10) expression -> . NAME = expression
    (15) expression -> . type NAME = expression
    (19) expression -> . NAME ( call_args )
    (23) expression -> . error ; expression
    (24) expression -> . expression ; expression
    (25) expression -> . { expression }
    (26) expression -> . IF expression THEN expression else_expression
    (29) expression -> . WHILE expression DO expression END
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression ^ expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression NEQ expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . NUMBER
    (42) expression -> . FLOAT
    (43) expression -> . STRING
    (44) expression -> . TRUE
    (45) expression -> . FALSE
    (46) expression -> . NAME
    (3) convert -> . 2INT
    (4) convert -> . 2STR
    (5) convert -> . 2FLOAT
    (6) convert -> . 2BOOL
    (11) type -> . STRING_TYPE
    (12) type -> . INT_TYPE
    (13) type -> . FLOAT_TYPE
    (14) type -> . BOOL_TYPE

    NOT             shift and go to state 8
    PRINT           shift and go to state 9
    NAME            shift and go to state 4
    error           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    -               shift and go to state 5
    (               shift and go to state 10
    NUMBER          shift and go to state 15
    FLOAT           shift and go to state 16
    STRING          shift and go to state 17
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    2INT            shift and go to state 20
    2STR            shift and go to state 21
    2FLOAT          shift and go to state 22
    2BOOL           shift and go to state 23
    STRING_TYPE     shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    expression                     shift and go to state 51
    convert                        shift and go to state 7
    type                           shift and go to state 6

state 15

    (41) expression -> NUMBER .

    ;               reduce using rule 41 (expression -> NUMBER .)
    +               reduce using rule 41 (expression -> NUMBER .)
    -               reduce using rule 41 (expression -> NUMBER .)
    *               reduce using rule 41 (expression -> NUMBER .)
    /               reduce using rule 41 (expression -> NUMBER .)
    ^               reduce using rule 41 (expression -> NUMBER .)
    EQ              reduce using rule 41 (expression -> NUMBER .)
    >               reduce using rule 41 (expression -> NUMBER .)
    <               reduce using rule 41 (expression -> NUMBER .)
    NEQ             reduce using rule 41 (expression -> NUMBER .)
    $end            reduce using rule 41 (expression -> NUMBER .)
    )               reduce using rule 41 (expression -> NUMBER .)
    }               reduce using rule 41 (expression -> NUMBER .)
    THEN            reduce using rule 41 (expression -> NUMBER .)
    DO              reduce using rule 41 (expression -> NUMBER .)
    ,               reduce using rule 41 (expression -> NUMBER .)
    ELSE            reduce using rule 41 (expression -> NUMBER .)
    END             reduce using rule 41 (expression -> NUMBER .)


state 16

    (42) expression -> FLOAT .

    ;               reduce using rule 42 (expression -> FLOAT .)
    +               reduce using rule 42 (expression -> FLOAT .)
    -               reduce using rule 42 (expression -> FLOAT .)
    *               reduce using rule 42 (expression -> FLOAT .)
    /               reduce using rule 42 (expression -> FLOAT .)
    ^               reduce using rule 42 (expression -> FLOAT .)
    EQ              reduce using rule 42 (expression -> FLOAT .)
    >               reduce using rule 42 (expression -> FLOAT .)
    <               reduce using rule 42 (expression -> FLOAT .)
    NEQ             reduce using rule 42 (expression -> FLOAT .)
    $end            reduce using rule 42 (expression -> FLOAT .)
    )               reduce using rule 42 (expression -> FLOAT .)
    }               reduce using rule 42 (expression -> FLOAT .)
    THEN            reduce using rule 42 (expression -> FLOAT .)
    DO              reduce using rule 42 (expression -> FLOAT .)
    ,               reduce using rule 42 (expression -> FLOAT .)
    ELSE            reduce using rule 42 (expression -> FLOAT .)
    END             reduce using rule 42 (expression -> FLOAT .)


state 17

    (43) expression -> STRING .

    ;               reduce using rule 43 (expression -> STRING .)
    +               reduce using rule 43 (expression -> STRING .)
    -               reduce using rule 43 (expression -> STRING .)
    *               reduce using rule 43 (expression -> STRING .)
    /               reduce using rule 43 (expression -> STRING .)
    ^               reduce using rule 43 (expression -> STRING .)
    EQ              reduce using rule 43 (expression -> STRING .)
    >               reduce using rule 43 (expression -> STRING .)
    <               reduce using rule 43 (expression -> STRING .)
    NEQ             reduce using rule 43 (expression -> STRING .)
    $end            reduce using rule 43 (expression -> STRING .)
    )               reduce using rule 43 (expression -> STRING .)
    }               reduce using rule 43 (expression -> STRING .)
    THEN            reduce using rule 43 (expression -> STRING .)
    DO              reduce using rule 43 (expression -> STRING .)
    ,               reduce using rule 43 (expression -> STRING .)
    ELSE            reduce using rule 43 (expression -> STRING .)
    END             reduce using rule 43 (expression -> STRING .)


state 18

    (44) expression -> TRUE .

    ;               reduce using rule 44 (expression -> TRUE .)
    +               reduce using rule 44 (expression -> TRUE .)
    -               reduce using rule 44 (expression -> TRUE .)
    *               reduce using rule 44 (expression -> TRUE .)
    /               reduce using rule 44 (expression -> TRUE .)
    ^               reduce using rule 44 (expression -> TRUE .)
    EQ              reduce using rule 44 (expression -> TRUE .)
    >               reduce using rule 44 (expression -> TRUE .)
    <               reduce using rule 44 (expression -> TRUE .)
    NEQ             reduce using rule 44 (expression -> TRUE .)
    $end            reduce using rule 44 (expression -> TRUE .)
    )               reduce using rule 44 (expression -> TRUE .)
    }               reduce using rule 44 (expression -> TRUE .)
    THEN            reduce using rule 44 (expression -> TRUE .)
    DO              reduce using rule 44 (expression -> TRUE .)
    ,               reduce using rule 44 (expression -> TRUE .)
    ELSE            reduce using rule 44 (expression -> TRUE .)
    END             reduce using rule 44 (expression -> TRUE .)


state 19

    (45) expression -> FALSE .

    ;               reduce using rule 45 (expression -> FALSE .)
    +               reduce using rule 45 (expression -> FALSE .)
    -               reduce using rule 45 (expression -> FALSE .)
    *               reduce using rule 45 (expression -> FALSE .)
    /               reduce using rule 45 (expression -> FALSE .)
    ^               reduce using rule 45 (expression -> FALSE .)
    EQ              reduce using rule 45 (expression -> FALSE .)
    >               reduce using rule 45 (expression -> FALSE .)
    <               reduce using rule 45 (expression -> FALSE .)
    NEQ             reduce using rule 45 (expression -> FALSE .)
    $end            reduce using rule 45 (expression -> FALSE .)
    )               reduce using rule 45 (expression -> FALSE .)
    }               reduce using rule 45 (expression -> FALSE .)
    THEN            reduce using rule 45 (expression -> FALSE .)
    DO              reduce using rule 45 (expression -> FALSE .)
    ,               reduce using rule 45 (expression -> FALSE .)
    ELSE            reduce using rule 45 (expression -> FALSE .)
    END             reduce using rule 45 (expression -> FALSE .)


state 20

    (3) convert -> 2INT .

    NOT             reduce using rule 3 (convert -> 2INT .)
    PRINT           reduce using rule 3 (convert -> 2INT .)
    NAME            reduce using rule 3 (convert -> 2INT .)
    error           reduce using rule 3 (convert -> 2INT .)
    {               reduce using rule 3 (convert -> 2INT .)
    IF              reduce using rule 3 (convert -> 2INT .)
    WHILE           reduce using rule 3 (convert -> 2INT .)
    -               reduce using rule 3 (convert -> 2INT .)
    (               reduce using rule 3 (convert -> 2INT .)
    NUMBER          reduce using rule 3 (convert -> 2INT .)
    FLOAT           reduce using rule 3 (convert -> 2INT .)
    STRING          reduce using rule 3 (convert -> 2INT .)
    TRUE            reduce using rule 3 (convert -> 2INT .)
    FALSE           reduce using rule 3 (convert -> 2INT .)
    2INT            reduce using rule 3 (convert -> 2INT .)
    2STR            reduce using rule 3 (convert -> 2INT .)
    2FLOAT          reduce using rule 3 (convert -> 2INT .)
    2BOOL           reduce using rule 3 (convert -> 2INT .)
    STRING_TYPE     reduce using rule 3 (convert -> 2INT .)
    INT_TYPE        reduce using rule 3 (convert -> 2INT .)
    FLOAT_TYPE      reduce using rule 3 (convert -> 2INT .)
    BOOL_TYPE       reduce using rule 3 (convert -> 2INT .)


state 21

    (4) convert -> 2STR .
